# PythonCore

./: .gitignore  README.md  activate_dev.sh  csv_configs.json  csv_reporter.py  csv_reporter_config.py  init_sqlite_db.py  language_catalog.md  language_catalog.py  main_language_demo.py  pyproject.toml  sqlite_adapter.py  test.csv  test2.csv  test_csv_reporter.py  test_language_catalog.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: csv_configs.json  messages.json  queries.json
doc/: ARCHITECTURE.md  SERVICE.md  TODO.md
examples/: test_csv_reporter.py  test_language_catalog.py
server/app/: deps.py  lifecycle.py  main.py  settings.py
server/app/routers/: __init__.py  admin.py  config.py  csv.py  dummy.py  health.py  jobs.py
server/app/services/: csv_reporter_service.py  job_manager.py
src/: csv_reporter.py  csv_reporter_config.py  language_catalog.py  language_service.py  sqlite_adapter.py
tests/: test_smoke.py
